[gd_scene load_steps=4 format=3 uid="uid://bchrhsbo7jygw"]

[ext_resource type="PackedScene" uid="uid://benplky4sn1ay" path="res://Blue Mercury Assets/3D Models/Units/M60A1/M60A1_Boned.blend" id="1_1xo3t"]
[ext_resource type="Script" uid="uid://bnvus3djq5hwu" path="res://Blue Mercury Assets/Scenes/newTestM60A1script.gd" id="1_dxwir"]

[sub_resource type="BoxShape3D" id="BoxShape3D_1xo3t"]
size = Vector3(5.38361, 1.30865, 3.50244)

[node name="M60A1" type="Node3D"]

[node name="VehicleBody3D" type="VehicleBody3D" parent="."]
mass = 1000.0
gravity_scale = 3.0
linear_damp = 0.9
script = ExtResource("1_dxwir")

[node name="M60A1_Boned" parent="VehicleBody3D" instance=ExtResource("1_1xo3t")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -3.52859e-05, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="VehicleBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.152674, 1.14215, 0.00708068)
shape = SubResource("BoxShape3D_1xo3t")

[node name="RightWheel1" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2.23379, 0.548865, -1.40511)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="RightWheel2" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.3955, 0.548865, -1.40511)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="RightWheel3" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.561978, 0.548865, -1.40511)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="RightWheel4" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.281074, 0.548865, -1.40511)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="RightWheel5" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.11936, 0.548865, -1.40511)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="RightWheel6" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.94812, 0.548865, -1.40511)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="LeftWheel1" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -2.23379, 0.548865, 1.42542)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="LeftWheel2" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -1.3955, 0.548865, 1.42542)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="LeftWheel3" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.561978, 0.548865, 1.42542)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="LeftWheel4" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 0.281073, 0.548865, 1.42542)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="LeftWheel5" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.11936, 0.548865, 1.42542)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0

[node name="LeftWheel6" type="VehicleWheel3D" parent="VehicleBody3D"]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.94812, 0.548865, 1.42542)
use_as_traction = true
wheel_radius = 0.4
suspension_stiffness = 30.0
